modifico el token para optener mas informacion del usuario

--- a/frontend/src/app/component/mascota/registrar-mascota/registrar-mascota.html
+++ b/frontend/src/app/component/mascota/registrar-mascota/registrar-mascota.html
@@ -75,7 +75,11 @@
 
       <div class="form-group">
         <label>Usuario que publica</label>
-        <input type="text" value="Usuario autenticado" disabled />
+        <input
+          type="text"
+          [value]="usuarioNombre || 'Usuario autenticado'"
+          disabled
+        />
       </div>
 
       <button type="submit" class="btn btn-primary btn-large">
