--- a/frontend/src/app/component/mascota/registrar-mascota/registrar-mascota.html
+++ b/frontend/src/app/component/mascota/registrar-mascota/registrar-mascota.html
@@ -65,6 +65,7 @@
         <label>Ubicación donde se perdió</label>
 
         <app-mapa
+          *ngIf="lat && lon"
           [lat]="lat"
           [lon]="lon"
           (coordenadasSeleccionadas)="onMapaSeleccionado($any($event))">
