--- a/frontend/src/app/component/mascota/registrar-mascota/registrar-mascota.html
+++ b/frontend/src/app/component/mascota/registrar-mascota/registrar-mascota.html
@@ -17,38 +17,18 @@
       </div>
 
       <div class="form-group">
-        <label>Tamaño</label>
-        <select [(ngModel)]="tamanio" name="tamanio" required>
-          <option value="">Seleccionar</option>
-          <option value="CHICO">Chico</option>
-          <option value="MEDIANO">Mediano</option>
-          <option value="GRANDE">Grande</option>
-        </select>
+        <label>Tamaño (cm)</label>
+        <input
+          type="number"
+          [(ngModel)]="tamanio"
+          name="tamanio"
+          required
+        />
       </div>
 
       <div class="form-group">
         <label>Color</label>
         <input type="text" [(ngModel)]="color" name="color" />
-      </div>
-
-      <div class="form-group">
-        <label>Fecha de pérdida</label>
-        <input type="date" [(ngModel)]="fechaPerdida" name="fechaPerdida" />
-      </div>
-
-      <div class="form-group">
-        <label>Tipo de reporte</label>
-        <div class="radio-group">
-          <label>
-            <input type="radio" value="PROPIO" [(ngModel)]="tipoPerdida" name="tipoPerdida" />
-            Perdido propio
-          </label>
-
-          <label>
-            <input type="radio" value="AJENO" [(ngModel)]="tipoPerdida" name="tipoPerdida" />
-            Perdido ajeno
-          </label>
-        </div>
       </div>
 
       <div class="form-group">
